themes/news/less/_panel-newspaper-columns.less
@import "_less.less";

@column-gap-sm: 1.0em;
@column-gap-md: 1.25em;
@column-gap-lg: 1.5em;

.newspaper-columns-content {
  & > p,
  & > div {
    -webkit-column-break-inside: avoid; /* Chrome, Safari, Opera */
    page-break-inside: avoid; /* Firefox */
    break-inside: avoid; /* IE 10+ */
    display: inline-block;
  }
}

.newspaper-columns-2 {
  .newspaper-columns-content {
    @media (min-width: @screen-md-min) {
      -moz-column-count: 2;
      -webkit-column-count: 2;
      column-count: 2;
      -moz-column-gap: @column-gap-md;
      -webkit-column-gap: @column-gap-md;
      column-gap: @column-gap-md;
    }
  }
}

.newspaper-columns-3 {
  .newspaper-columns-content {
    @media (min-width: @screen-sm-min) and (max-width: @screen-sm-max) {
      -moz-column-count: 2;
      -webkit-column-count: 2;
      column-count: 2;
      -moz-column-gap: @column-gap-sm;
      -webkit-column-gap: @column-gap-sm;
      column-gap: @column-gap-sm;
    }
    @media (min-width: @screen-md-min) and (max-width: @screen-md-max) {
      -moz-column-count: 3;
      -webkit-column-count: 3;
      column-count: 3;
      -moz-column-gap: @column-gap-md;
      -webkit-column-gap: @column-gap-md;
      column-gap: @column-gap-md;
    }
    @media (min-width: @screen-lg-min) {
      -moz-column-count: 3;
      -webkit-column-count: 3;
      column-count: 3;
      -moz-column-gap: @column-gap-lg;
      -webkit-column-gap: @column-gap-lg;
      column-gap: @column-gap-lg;
    }
  }
}

.newspaper-columns-4 {
  .newspaper-columns-content {
    @media (min-width: @screen-sm-min) and (max-width: @screen-sm-max) {
      -moz-column-count: 2;
      -webkit-column-count: 2;
      column-count: 2;
      -moz-column-gap: @column-gap-sm;
      -webkit-column-gap: @column-gap-sm;
      column-gap: @column-gap-sm;
    }
    @media (min-width: @screen-md-min) and (max-width: @screen-md-max) {
      -moz-column-count: 3;
      -webkit-column-count: 3;
      column-count: 3;
      -moz-column-gap: @column-gap-md;
      -webkit-column-gap: @column-gap-md;
      column-gap: @column-gap-md;
    }
    @media (min-width: @screen-lg-min) {
      -moz-column-count: 4;
      -webkit-column-count: 4;
      column-count: 4;
      -moz-column-gap: @column-gap-lg;
      -webkit-column-gap: @column-gap-lg;
      column-gap: @column-gap-lg;
    }
  }
}

